z-index fix

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     flex-basis: 100%;
     position: sticky;
     top: 0;
+    z-index: 1000;
     
 
 }
